Fixed: Bug 24252 - Multi-level folder hierarchy not readable

--- a/ui/apps/themes/style.less
+++ b/ui/apps/themes/style.less
@@ -1279,9 +1279,10 @@ input.nice-input {
     .folder {
         line-height: 34px;
         padding: 0 13px 0 0;
-        overflow: hidden;
+        overflow: visible;
         white-space: nowrap;
-        text-overflow: ellipsis;
+        display: table;
+        width: 100%;
     }
 
     .folder.selectable, .folder.expandable { cursor: pointer; }
@@ -1327,7 +1328,7 @@ input.nice-input {
         padding: 0 0.75em 0 0.75em;
         margin-top: 4px;
         text-align: right;
-        margin-left: 0.5em;
+        margin-left: 1em;
         display: inline-block;
         float: right;
         background-color: #f0f0f0;
